# LegacyDock---Open-Source-Legacy-IOS-Hub

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  app.js  changelog.html  cli.js  console.html  docs.html  index.html  package.json  pnpm-lock.yaml  pricing.html  releases.html  server.js  site.js  styles.css
.github/workflows/: pages.yml  release.yml
config/updater/: legacydock.pub
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: main.tsx  styles.css  supabase.ts
docs/: architecture.md  beta-device-qa.md  beta-release-checklist.md  commercial-build.md  commercial-readiness.md  community-intelligence.md  device-doctor-care.md  integrations.md  legacydock-blueprint.md  privacy.md  release-and-updates.md  repository-hub.md  roadmap.md  supabase-cloud.md  tauri-desktop.md  terms.md  third-party-license-review.md  windows-production-setup.md
schemas/: community-report.schema.json  device-profile.schema.json  package.schema.json  repository.schema.json  restoration-workflow.schema.json  snapshot.schema.json
scripts/: generate-tauri-icon.cjs  generate-update-manifest.cjs  run-tauri.cjs  setup-libimobiledevice.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  device.rs  diagnostics.rs  lib.rs  main.rs  migrations.rs  mutation.rs  packages.rs  repository.rs
src/core/: cloudServices.js  commercialApi.js  compliance.js  dependencyResolver.js  (+13 more)
supabase/: legacydock-cloud.sql
test/: core.test.js
updates/: stable.json
(+10 files in other folders)
