[package]
name = "legacydock"
version = "0.1.0"
description = "LegacyDock desktop utility for legacy iOS diagnostics, repositories, snapshots, and preservation."
authors = ["LegacyDock contributors"]
license = "AGPL-3.0-only"
repository = "https://github.com/monkeseeds/LegacyDock---Open-Source-Legacy-IOS-Hub"
edition = "2021"

[lib]
name = "legacydock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
thiserror = "1"
